# spina

./: .gitignore  README.md  pyproject.toml
.github/workflows/: convert-and-deploy.yml
src/spina/: cli.py  config.py  intermediate.py  metadata.py  models.py  pipeline.py  postprocess.py  splitter.py
src/spina/engines/: base.py  marker_engine.py
src/spina/outputs/: epub_builder.py  pdf_builder.py  site_builder.py
src/spina/site/: book_info_generator.py  index_generator.py  mkdocs_config.py
src/spina/site/overrides/: main.html
tests/: conftest.py  test_book_info_generator.py  test_cli.py  test_config.py  test_engine_base.py  test_epub_builder.py  test_index_generator.py  test_intermediate.py  test_marker_engine.py  test_metadata.py  test_mkdocs_config.py  test_models.py  test_pdf_builder.py  test_pipeline.py  test_postprocess.py  test_site_builder.py  test_splitter.py
